Darkened the site list.

--- a/src/client/css/_filter-box.less
+++ b/src/client/css/_filter-box.less
@@ -1,42 +1,54 @@
-﻿.filter-box {
-    padding-top: 20px;
-    padding-right: 20px;
+.filter-box {
     color: #aaa;
-    background: rgba(0, 0, 0, 0.14);
-    border-radius: 5px;
+    background: #202020;
+    padding: 20px 1em;
+    border: 8px solid #323232;
+    display: block;
+    font-size: 1.4em;
+    border-radius: 1em;
+    box-shadow: 0 0 5px #222;
+    position: relative;
 }
 
+
 .filter-box .title {
+    color: #ed9d13;
     font-weight: 100;
     font-size: 18px;
 }
 
+
 .filter-box h3 {
     font-size: 16px;
     text-transform: uppercase;
-    color: rgba(119, 119, 119, 0.76);
+    color: #6ab825;
     padding-bottom: 11px;
     font-weight: 600;
 }
+
 
 .filter-box hr {
     border-color: rgba(255, 255, 255, 0.25);
 }
 
+
 .filter-box ul {
-    margin-bottom: 30px; 
+    margin-bottom: 30px;
 }
+
 
 .filter-box ul li {
     font-size: 16px;
     margin-bottom: 13px;
 }
 
+
 .filter-box.hr {
     border-top: 2px solid rgba(136, 136, 136, 0.26);
     margin-top: 20px;
     width: 100%;
 }
+
 
 .filter-box ul li .subdued {
     color: #777;
