--- a/src/client/css/_site-list.less
+++ b/src/client/css/_site-list.less
@@ -1,31 +1,39 @@
 .site-list {
+    
 }
+
 
 .site-list > .panel-group .panel {
-    border: 1px solid rgba(255, 255, 255, 0.12);
-    background-color: transparent;
-    border-radius: 2px;
+    border: 8px solid #323232;
+    background-color: #202020;
+    border-radius: 1em;
+    margin-bottom: 25px;
 }
 
+
 .site-list > .panel-group .panel-heading {
-    color: #CACDD1;
-    background-color: #2B3848;
+    color: #cacdd1;
+    background-color: transparent;
     padding: 0;
 }
+
 
 .site-list .panel-heading h4 {
     font-size: 21px;
     font-weight: 400;
 }
 
+
 .site-list .panel-heading h4 a {
+    color: #ed9d13;
     width: 100%;
     display: inline-block;
-    padding-left: 15px;
-    padding-top: 9px;
-    padding-bottom: 9px;
+    padding-left: 30px;
+    padding-top: 15px;
+    padding-bottom: 15px;
     text-decoration: none;
 }
+
 
 .site-list .panel-heading {
     -moz-transition: all 400ms cubic-bezier(0.215,0.61,0.355,1);
@@ -34,22 +42,25 @@
     transition: all 400ms cubic-bezier(0.215,0.61,0.355,1);
 }
 
+
 .site-list .panel-heading:hover {
     background: rgba(67, 88, 113, 0.48);
 }
 
+
 .site-list .panel.panel-default .panel-body {
     border-bottom: 1px solid rgba(255, 255, 255, 0.09);
     border-top: 1px solid rgba(255, 255, 255, 0.09);
-    padding: 25px 20px 0 15px;
+    padding: 25px 25px 0;
     cursor: pointer;
 }
+
 
 .site-list .list-text {
     padding-bottom: 15px;
     padding-left: 5px;
-    margin-top: -15px;
 }
+
 
 .site-list .list-text h4 {
     font-size: 28px;
@@ -57,34 +68,42 @@
     margin-bottom: 12px;
 }
 
+
 .site-list.dark .list-text p {
     margin-bottom: 1px;
     font-size: 16px;
     color: rgba(204, 204, 204, 0.67);
 }
 
+
 .site-list.dark .list-text .highlight-text {
     color: white;
-    text-shadow: 0 0px 20px rgba(255, 255, 255, 0.71);
+    text-shadow: 0 0 20px rgba(255, 255, 255, 0.71);
 }
+
 
 .site-list.dark .list-text > p.secondary {
     color: rgba(204, 204, 204, 0.67);
     font-size: 15px;
 }
 
+
 .site-list.dark .list-text .more-info {
     margin-top: 30px;
 }
 
+
 .list-text .more-info a {
     cursor: pointer;
+    color: #447fcf;
 }
+
 
 .site-list .list-text ul {
     list-style-type: disc;
     padding-left: 30px;
 }
+
 
 .site-list .list-text ul li {
     color: rgba(204, 204, 204, 0.67);
@@ -92,16 +111,19 @@
     padding: 0;
 }
 
+
 .site-list .list-text ul li:hover {
     box-shadow: none;
     background: transparent;
 }
+
 
 .list h2 {
     font-weight: 800;
     font-size: 30px;
     margin-bottom: 10px;
 }
+
 
 .list-img {
     padding-bottom: 30px;
