--- a/src/client/css/_section.less
+++ b/src/client/css/_section.less
@@ -3,39 +3,48 @@
 .section {
     padding-top: 50px;
     padding-bottom: 50px;
-
+    
     &.highlight {
         background: #f1f1f1;
     }
+    
 
     &.secondary-highlight {
-        background: #2b3848;
+        background: #191919;
         -moz-box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
         -webkit-box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
         box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
     }
+
 }
+
 
 .section.color0 {
     background: white;
 }
+
 
 .section.color0 .box {
     background: #f2f2f2;
     height: 100px;
 }
 
+
 .section.color1 {
     background: @section-orange;
 }
+
 
 .section.color2 {
     background: #f5f5f5;
 }
 
-.section.color2 p, .section.color2 h2 {
+
+.section.color2 p,
+.section.color2 h2 {
     color: #333;
 }
+
 
 .section.color2 .box {
     height: 100px;
@@ -44,33 +53,41 @@
     padding-top: 10px;
 }
 
+
 .section.color3 {
-    background: #222222;
-    background: url('../img/dark_mosaic.png');
+    background: #222;
+    background: url("../img/dark_mosaic.png");
 }
 
-.section.color3 p, .section.color3 h2 {
+
+.section.color3 p,
+.section.color3 h2 {
     color: #949494;
 }
+
 
 .section.color4 {
     background: #8696b3;
 }
+
 
 .section .hand {
     width: 81px;
     margin-right: 13px;
 }
 
+
 .section-header {
     padding-bottom: 20px;
     margin-bottom: 15px;
 }
 
+
 .section-header.tight {
     margin-bottom: 0;
     padding-top: 20px;
 }
+
 
 .section-header h2 {
     font-size: 2em;
@@ -81,27 +98,33 @@
     font-family: "Roboto";
 }
 
+
 .section-header h2 .subdued {
     font-size: 18px;
     margin-left: 2px;
     color: #bbb;
 }
 
+
 .secondary-highlight .section-header h2 {
-    color: rgba(255, 255, 255, 0.77);
+    color: #cca300;
 }
+
 
 .section-body {
     margin-bottom: 35px;
 }
 
-.section-footer {
 
+.section-footer {
+    
 }
+
 
 .jumbotron {
     margin-bottom: 0;
 }
+
 
 .summary-row {
     margin-bottom: 40px;
