--- a/src/client/css/site.less
+++ b/src/client/css/site.less
@@ -7,7 +7,7 @@
 @import "_banner.less";
 @import "_section.less";
 @import "_grid.less";
-@import "_list.less";
+@import "_site-list.less";
 @import "_page.less";
 @import "_filter-box.less";
 @import "_arrow.less";
