--- a/src/client/css/_section.less
+++ b/src/client/css/_section.less
@@ -3,9 +3,12 @@
 .section {
     padding-top: 50px;
     padding-bottom: 50px;
+    background-color: #f9f9fb;
+    border-top: 1px solid #f1f1f3;
     
     &.highlight {
         background: #f1f1f1;
+        border-top: 1px solid #dfdfdf;
     }
     
 
