Main banner work. Messages

--- a/src/client/css/_banner.less
+++ b/src/client/css/_banner.less
@@ -1,81 +1,27 @@
-.main-banner {
-    background: #fff;
-    overflow: hidden;
-    position: relative;
-    padding-top: 30%;
-}
-
-
-.main-banner-background {
-    background: -webkit-linear-gradient(rgba(0, 0, 0, 0.6), rgba(23, 21, 21, 0.2) 80px);
-    background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(23, 21, 21, 0.2) 80px);
-    background: url("../img/rainbow.png") no-repeat;
-    background-size: initial;
-    height: 480px;
-    background-position-y: -80px;
-}
-
-
-.main-banner img.kenburns-effect {
-    -moz-animation: zoom 12s alternate infinite;
-    -o-animation: zoom 12s alternate infinite;
-    -webkit-animation: zoom 12s alternate infinite;
-    animation: zoom 12s alternate infinite;
-    position: absolute;
-    top: 0;
-    left: -5%;
-    width: 110%;
-    height: 165%;
-}
-
-
-.main-banner .container {
-    
-}
-
-
-.main-banner .title {
-    position: absolute;
-    width: 100%;
-    z-index: 2;
-    height: 200px;
-    left: 0;
-    bottom: 0;
-    padding: 20px;
+.main-banner .banner-image {
+    background: url("../img/rainbow-lg.png") no-repeat;
+    background-size: contain;
+    height: 337px;
+    margin-top: 40px;
+    margin-bottom: -25px;
 }
 
 
 .main-banner .title h1 {
-    color: #1f2836;
+    font-size: 46px;
+    text-transform: uppercase;
+    font-weight: bold;
     font-family: "Roboto";
-    margin-bottom: 10px;
-    font-size: 3em;
-    line-height: 1.2em;
-    font-weight: 100;
 }
 
 
 .main-banner .title h1 .emphasis {
-    font-size: 68px;
-}
-
-
-.main-banner .title h1 .normal {
-    display: inline-block;
-    font-size: 63px;
-    word-spacing: -7px;
+    
 }
 
 
 .main-banner .title .lead {
-    font-weight: 600;
-    color: #1f2836;
-    font-size: 22px;
-    margin-top: 15px;
-}
-
-
-.jumbotron {
-    color: rgba(255, 255, 255, 0.05);
-    padding: 0;
+    font-size: 18px;
+    color: #4c4c4c;
+    font-family: "Roboto";
 }
