--- a/src/client/css/_shell.less
+++ b/src/client/css/_shell.less
@@ -1,12 +1,4 @@
-﻿.navbar {
-    background: #222;
-    height: 27px;
-}
-
-.content-container {
-}
-
-.header-image {
+/* .header-image {
     margin-top: 20px;
     height: 250px;
     width: 100%;
@@ -14,11 +6,13 @@
     text-align: center;
 }
 
-    .header-image img {
-        max-height: 250px;
-    }
 
+.header-image img {
+    max-height: 250px;
+}
+*/
 .jumbotron-site {
+    
     //background: url(/images/painted.hands.png) no-repeat fixed top center;
     margin-top: 50px;
     background: #222;
@@ -30,44 +24,54 @@
     position: relative;
 }
 
-.horizontal-group li {
+
+/*.horizontal-group li {
     float: left;
 }
-
+*/
+/*
 @media (min-width: 1200px) {
     .content {
         left: 16.66667%;
     }
+
 }
+
 
 @media (min-width: 992px) {
     .content {
         left: 16.66667%;
     }
+
 }
+
 
 @media (min-width: 1200px) {
     .content {
         float: left;
         width: 66.66667%;
     }
+
 }
+
 
 @media (min-width: 992px) {
     .content {
         float: left;
         width: 66.66667%;
     }
+
 }
+
 
 @media (min-width: 768px) {
     .content {
         float: left;
         width: 100%;
     }
+
 }
-
-
+*/
 .footer {
     height: 52px;
     color: #111;
