--- a/src/client/css/_banner.less
+++ b/src/client/css/_banner.less
@@ -2,12 +2,13 @@
     background: url("../img/rainbow-lg.png") no-repeat;
     background-size: contain;
     height: 337px;
-    margin-top: 40px;
-    margin-bottom: -25px;
+    margin-top: 70px;
+    margin-bottom: -10px;
 }
 
 
 .main-banner .title h1 {
+    text-align: center;
     font-size: 46px;
     text-transform: uppercase;
     font-weight: bold;
@@ -21,6 +22,7 @@
 
 
 .main-banner .title .lead {
+    text-align: center;
     font-size: 18px;
     color: #4c4c4c;
     font-family: "Roboto";
