--- a/src/client/css/_nav.less
+++ b/src/client/css/_nav.less
@@ -37,7 +37,7 @@
     color: white;
     line-height: 30px;
     cursor: pointer;
-    padding: 15px 15px 12px;
+    padding: 17px 15px 12px;
     -webkit-transition: all 0.2s;
     transition: all 0.2s;
     text-decoration: none;
@@ -101,7 +101,7 @@
     width: 100%;
     color: #999;
     border-top: 1px solid #ddd;
-    padding: 12px 30px 8px 20px;
+    padding: 15px 30px 8px 25px;
     text-overflow: ellipsis;
     -moz-transition: background 100ms linear;
     -o-transition: background 100ms linear;
@@ -125,10 +125,11 @@
 
 
 .dropdown-menu.with-arrow > li > a > h4 {
-    font-size: 18px;
+    font-size: 16px;
     margin: 0;
-    line-height: 14px;
-    color: #333;
+    line-height: 9px;
+    color: #555;
+    font-weight: 800;
 }
 
 
@@ -140,7 +141,6 @@
 .dropdown-menu.with-arrow > li > a > small {
     color: #666;
     font-size: 14px;
-    line-height: 20px;
 }
 
 
@@ -157,8 +157,8 @@
 
 .dropdown-menu.with-icons > li > a > .icon {
     position: absolute;
-    left: 14px;
-    top: 16px;
-    font-size: 8px;
-    color: #3c3d3d;
+    left: 7px;
+    top: 11px;
+    font-size: 18px;
+    color: #00be39;
 }
