--- a/src/client/js/layout/nav.html
+++ b/src/client/js/layout/nav.html
@@ -13,8 +13,8 @@
                         <ul class="dropdown-menu with-icons with-arrow" role="menu">
                             <li role="presentation" ng-repeat="site in vm.sites">
                                 <div ng-if="$index === 0" class="arrow-up-nav-dropdown"></div>
-                                <a role="menuitem" tabindex="-1" href="#/shell/site/{{site.code}}" ng-click="vm.setActive(site)" ng-class="{ active: vm.isActive(site)}">
-                                    <span class="fa fa-circle icon"></span>
+                                <a role="menuitem" tabindex="-1" href="#/shell/site/{{site.code}}" ng-click="vm.setActive(site)">
+                                    <span class="fa fa-check icon" ng-hide="!vm.isActive(site)"></span>
                                     <h4>
                                         <span>{{site.name}}</span>
                                     </h4>
