--- a/src/client/js/layout/nav.html
+++ b/src/client/js/layout/nav.html
@@ -2,7 +2,7 @@
 <div>
     <div class="navbar navbar-fixed-top">
         <div class="container">
-            <a ui-sref="shell.home" class="logo" ng-click="vm.setActive({code: 'home'})">Rainbow</a>
+            <a ui-sref="shell.home" class="logo" ng-click="vm.setActive({code: 'home'})"></a>
             <ul class="nav navbar-nav pull-right">
                 <li class="dropdown">
                     <div class="btn-group" dropdown>
