--- a/src/client/css/_banner.less
+++ b/src/client/css/_banner.less
@@ -1,8 +1,35 @@
+.banner-message {
+    margin-top: 59px;
+    background-color: #f1883f;
+    text-align: center;
+    display: inline-block;
+    width: 100%;
+    padding-top: 11px;
+    font-size: 16px;
+    color: white;
+    font-weight: 600;
+    padding-bottom: 7px;
+}
+
+
+.banner-message p {
+    margin: 0;
+}
+
+
+.banner-message label {
+    color: rgba(19, 19, 19, 0.55);
+    text-transform: uppercase;
+    margin-right: 5px;
+    font-weight: 800;
+}
+
+
 .main-banner .banner-image {
     background: url("../img/rainbow-lg.png") no-repeat;
     background-size: contain;
     height: 337px;
-    margin-top: 70px;
+    margin-top: 10px;
     margin-bottom: -10px;
 }
 
