reorg'd the folder structure. Added pages.

--- a/src/client/css/_banner.less
+++ b/src/client/css/_banner.less
@@ -51,6 +51,6 @@
 .main-banner .title .lead {
     text-align: center;
     font-size: 18px;
-    color: #4c4c4c;
+    color: rgb(125, 125, 125);
     font-family: "Roboto";
 }
