--- a/src/client/css/_nav.less
+++ b/src/client/css/_nav.less
@@ -3,6 +3,7 @@
     height: 60px;
     border-bottom: 1px solid black;
     margin-bottom: 0;
+    box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.44);
 }
 
 
@@ -111,7 +112,7 @@
     width: 100%;
     color: #999;
     border-top: 1px solid #ddd;
-    padding: 15px 30px 8px 25px;
+    padding: 18px 30px 5px 25px;
     text-overflow: ellipsis;
     -moz-transition: background 100ms linear;
     -o-transition: background 100ms linear;
@@ -160,15 +161,15 @@
 
 
 .dropdown-menu.with-icons > li > a {
-    padding-left: 30px;
+    padding-left: 35px;
     position: relative;
 }
 
 
 .dropdown-menu.with-icons > li > a > .icon {
     position: absolute;
-    left: 7px;
-    top: 11px;
+    left: 9px;
+    top: 21px;
     font-size: 18px;
     color: #00be39;
 }
