Site details formatting

--- a/src/client/css/site.less
+++ b/src/client/css/site.less
@@ -1,5 +1,6 @@
 @import "_animate.less";
 @import "_normalize.less";
+@import "_card.less";
 @import "_core.less";
 @import "_button.less";
 @import "_shell.less";
