--- a/src/client/js/pages/layout/nav.html
+++ b/src/client/js/pages/layout/nav.html
@@ -26,6 +26,7 @@
                                 </a>
                             </li>
                         </ul>
+                        <a href="http://www.facebook.com/rainbowdaynurseryinc" target="_blank"><i class="fa fa-facebook-official"></i></a>
                     </div>
                 </li>
             </ul>
