--- a/src/client/css/_banner.less
+++ b/src/client/css/_banner.less
@@ -1,3 +1,4 @@
+// BANNER MESSAGE -------------------
 .banner-message {
     margin-top: 59px;
     background-color: #f1883f;
@@ -25,12 +26,47 @@
 }
 
 
+// MAIN BANNER -------------------
+.main-banner {
+    padding-bottom: 50px;
+    margin-top: 59px;
+}
+
+
+.main-banner.has-banner-message {
+    margin-top: 0;
+}
+
+
 .main-banner .banner-image {
     background: url("../img/rainbow-lg.png") no-repeat;
     background-size: contain;
-    height: 337px;
+    height: 217px;
     margin-top: 10px;
-    margin-bottom: -10px;
+}
+
+
+@media (min-width: 764px) {
+    .main-banner .banner-image {
+        height: 217px;
+    }
+
+}
+
+
+@media (min-width: 992px) {
+    .main-banner .banner-image {
+        height: 277px;
+    }
+
+}
+
+
+@media (min-width: 1200px) {
+    .main-banner .banner-image {
+        height: 347px;
+    }
+
 }
 
 
@@ -53,4 +89,40 @@
     font-size: 18px;
     color: rgb(125, 125, 125);
     font-family: "Roboto";
+    margin-top: 5px;
+}
+
+
+// SITE BANNER --------------------------
+.site-banner {
+    background: repeating-linear-gradient(45deg, rgba(228, 228, 228, 0.12), rgba(228, 228, 228, 0.1) 1px, rgba(16, 19, 35, 0) 1px, rgba(22, 26, 51, 0) 13px);
+    height: 350px;
+}
+
+
+.site-banner .site-banner-background {
+    background-image: radial-gradient(rgba(14, 23, 36, 0.93), #000000);
+    width: 100%;
+    height: 350px;
+    position: absolute;
+    z-index: -1;
+}
+
+
+.site-banner h1 {
+    font-size: 60px;
+    font-weight: 800;
+    text-align: center;
+    line-height: 78px;
+    color: white;
+    text-transform: uppercase;
+    padding-top: 70px;
+    text-shadow: 1px 1px 10px black;
+}
+
+
+.site-banner p {
+    text-align: center;
+    color: rgba(255, 255, 255, 0.92);
+    font-size: 20px;
 }
