--- a/src/client/css/_map.less
+++ b/src/client/css/_map.less
@@ -1,4 +1,3 @@
-﻿
 .map {
     width: 100%;
     border: 8px solid white;
@@ -7,3 +6,11 @@
     border-radius: 3px;
 }
 
+
+.map-lg {
+    width: 591px;
+    border: 8px solid white;
+    box-sizing: content-box;
+    box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.39);
+    border-radius: 3px;
+}
