--- a/src/client/css/_nav.less
+++ b/src/client/css/_nav.less
@@ -136,9 +136,9 @@
 
 
 .dropdown-menu.with-arrow > li > a > h4 {
-    font-size: 16px;
+    font-size: 15px;
     margin: 0;
-    line-height: 9px;
+    line-height: 7px;
     color: #555;
     font-weight: 800;
 }
@@ -152,6 +152,7 @@
 .dropdown-menu.with-arrow > li > a > small {
     color: #666;
     font-size: 14px;
+    text-transform: none;
 }
 
 
