--- a/src/client/css/_section.less
+++ b/src/client/css/_section.less
@@ -1,82 +1,46 @@
 @import "_variables.less";
 
+// SECTIONS ----------------
 .section {
     padding-top: 50px;
     padding-bottom: 50px;
+}
+
+
+.section.section-light-gray {
+    background: #f1f1f1;
+    border-top: 1px solid #dfdfdf;
     background-color: #f9f9fb;
     border-top: 1px solid #f1f1f3;
-    
-    &.highlight {
-        background: #f1f1f1;
-        border-top: 1px solid #dfdfdf;
-    }
-    
-
-    &.secondary-highlight {
-        background: #191919;
-        -moz-box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
-        -webkit-box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
-        box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
-    }
-
 }
 
 
-.section.color0 {
-    background: white;
+.section.section-dark-gray {
+    background-color: #f1f1f1;
 }
 
 
-.section.color0 .box {
-    background: #f2f2f2;
-    height: 100px;
+.section.section-blue {
+    background-color: #0e1724;
 }
 
 
-.section.color1 {
-    background: @section-orange;
+.section.section-dark {
+    background: #191919;
+    -moz-box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
+    -webkit-box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
+    box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 
-.section.color2 {
-    background: #f5f5f5;
+.section.has-navbar {
+    margin-top: 59px;
 }
 
 
-.section.color2 p,
-.section.color2 h2 {
-    color: #333;
-}
-
-
-.section.color2 .box {
-    height: 100px;
-    background: white;
-    margin-right: 10px;
-    padding-top: 10px;
-}
-
-
-.section.color3 {
-    background: #222;
-    background: url("../img/dark_mosaic.png");
-}
-
-
-.section.color3 p,
-.section.color3 h2 {
-    color: #949494;
-}
-
-
-.section.color4 {
-    background: #8696b3;
-}
-
-
-.section .hand {
-    width: 81px;
-    margin-right: 13px;
+// SECTION HEADERS ----------------
+.section.section-dark .section-header h2 {
+    color: #cca300;
 }
 
 
@@ -109,26 +73,33 @@
 }
 
 
-.secondary-highlight .section-header h2 {
-    color: #cca300;
+// SECTION DETAILS ------------
+.section .section-details h2 {
+    font-size: 2em;
+    font-size: 42px;
+    line-height: 47px;
+    color: #333;
+    font-weight: 500;
+    font-family: "Roboto";
+    margin-bottom: 10px;
 }
 
 
+.section .section-details p {
+    color: #333;
+    font-size: 15px;
+    line-height: 16px;
+}
+
+
+// SECTION BODY -----------
 .section-body {
     margin-bottom: 35px;
 }
 
 
-.section-footer {
-    
-}
-
-
-.jumbotron {
-    margin-bottom: 0;
-}
-
-
-.summary-row {
-    margin-bottom: 40px;
+// TODO -----
+.section .hand {
+    width: 81px;
+    margin-right: 13px;
 }
