Social media, getting ready to upgrade angular libs

--- a/src/client/css/_banner.less
+++ b/src/client/css/_banner.less
@@ -13,8 +13,14 @@
 }
 
 
-.banner-message p {
+.banner-message a {
     margin: 0;
+    color: white;
+}
+
+
+.banner-message a:hover {
+    cursor: pointer;
 }
 
 
