--- a/src/client/js/pages/layout/nav.html
+++ b/src/client/js/pages/layout/nav.html
@@ -26,8 +26,12 @@
                                 </a>
                             </li>
                         </ul>
-                        <a href="http://www.facebook.com/rainbowdaynurseryinc" target="_blank"><i class="fa fa-facebook-official"></i></a>
                     </div>
+                </li>
+                <li>
+                    <span class="social-media-group">
+                        <a href="http://www.facebook.com/rainbowdaynurseryinc" target="_blank"><i class="fa fa-facebook-official"></i></a>
+                    </span>
                 </li>
             </ul>
         </div>
