Fixed broken build.

--- a/src/client/css/_nav.less
+++ b/src/client/css/_nav.less
@@ -105,7 +105,7 @@
 
 
 .nav > li .social-media-group a i {
-    transition: all 0.2s ease;
+    transition: background-color 0.2s ease;
     border-radius: 20px;
     line-height: 23px;
 }
