Restructured the announcement and added it to P5 site details.

--- a/src/client/css/_section.less
+++ b/src/client/css/_section.less
@@ -33,6 +33,11 @@
 }
 
 
+.section.section-orange {
+    background-color: #f1883f;
+}
+
+
 .section.has-navbar {
     margin-top: 59px;
 }
@@ -75,20 +80,38 @@
 
 // SECTION DETAILS ------------
 .section .section-details h2 {
-    font-size: 2em;
-    font-size: 42px;
+    font-size: 34px;
     line-height: 47px;
     color: #333;
     font-weight: 500;
     font-family: "Roboto";
-    margin-bottom: 10px;
+    margin-bottom: 20px;
+}
+
+
+.section.section-orange .section-details h2 {
+    color: rgba(255, 255, 255, 0.47);
 }
 
 
 .section .section-details p {
     color: #333;
-    font-size: 15px;
     line-height: 16px;
+    font-size: 16px;
+    font-weight: 600;
+}
+
+
+// SECTION PARAGRAPH ------------
+.section .section-paragraph {
+    font-size: 18px;
+    line-height: 29px;
+    margin-bottom: 30px;
+}
+
+
+.section.section-orange .section-paragraph {
+    color: white;
 }
 
 
