--- a/src/client/css/_banner.less
+++ b/src/client/css/_banner.less
@@ -45,40 +45,13 @@
 
 
 .main-banner .banner-image {
-    background: url("../img/rainbow-lg.png") no-repeat;
-    background-size: contain;
-    height: 217px;
-    margin-top: 10px;
-}
-
-
-@media (min-width: 764px) {
-    .main-banner .banner-image {
-        height: 217px;
-    }
-
-}
-
-
-@media (min-width: 992px) {
-    .main-banner .banner-image {
-        height: 277px;
-    }
-
-}
-
-
-@media (min-width: 1200px) {
-    .main-banner .banner-image {
-        height: 347px;
-    }
-
+    width: 100%;
 }
 
 
 .main-banner .title h1 {
     text-align: center;
-    font-size: 46px;
+    font-size: 48px;
     text-transform: uppercase;
     font-weight: bold;
     font-family: "Roboto";
