Added school addresses and finished up site-details

--- a/src/client/css/_card.less
+++ b/src/client/css/_card.less
@@ -34,3 +34,33 @@
     margin-bottom: 3px;
     text-align: center;
 }
+
+
+// ----------
+.cards.cards-light .card {
+    margin-bottom: 25px;
+    font-size: 18px;
+    line-height: 23px;
+    margin-bottom: 6px;
+    border-top: 1px solid rgba(128, 128, 128, 0.31);
+    padding-top: 14px;
+}
+
+
+.cards.cards-light .card h3 {
+    font-size: 18px;
+    line-height: 23px;
+    margin-bottom: 10px;
+}
+
+
+.cards.cards-light .card p {
+    font-size: 13px;
+    color: #363f4d;
+    margin-bottom: 2px;
+}
+
+
+.cards.cards-light .card a {
+    font-size: 14px;
+}
