--- a/src/client/css/_grid.less
+++ b/src/client/css/_grid.less
@@ -1,14 +1,15 @@
-﻿.grid h3 {
+.grid h3 {
     color: #555;
     font-size: 24px;
-    margin: 0 0 .5em;
+    margin: 0 0 0.5em;
     line-height: 28px;
     font-family: "Roboto";
 }
 
+
 .grid .grid-text {
     margin: 0 0 2em;
     font-size: 17px;
-    color: #222;
-    font-weight: 100;
+    line-height: 1.8em;
+    color: #4a4a4a;
 }
