--- a/src/client/css/_banner.less
+++ b/src/client/css/_banner.less
@@ -51,22 +51,21 @@
 
 .main-banner .title h1 {
     text-align: center;
-    font-size: 48px;
-    text-transform: uppercase;
+    font-size: 50px;
     font-weight: bold;
     font-family: "Roboto";
 }
 
 
 .main-banner .title h1 .emphasis {
-    
+    color: #f6883a;
 }
 
 
 .main-banner .title .lead {
     text-align: center;
-    font-size: 18px;
-    color: rgb(125, 125, 125);
+    font-size: 24px;
+    color: #555;
     font-family: "Roboto";
     margin-top: 5px;
 }
