--- a/src/client/css/_section.less
+++ b/src/client/css/_section.less
@@ -63,7 +63,7 @@
 
 .section-header h2 {
     font-size: 2em;
-    font-size: 42px;
+    font-size: 40px;
     line-height: 47px;
     color: #333;
     font-weight: 500;
@@ -94,11 +94,17 @@
 }
 
 
+.section .section-details .sub-title {
+    margin-bottom: 35px;
+    font-size: 18px;
+    margin-top: -15px;
+}
+
+
 .section .section-details p {
     color: #333;
     line-height: 16px;
     font-size: 16px;
-    font-weight: 600;
 }
 
 
@@ -118,6 +124,12 @@
 // SECTION BODY -----------
 .section-body {
     margin-bottom: 35px;
+}
+
+
+.section-body p {
+    font-size: 17px;
+    line-height: 1.8em;
 }
 
 
