--- a/src/client/css/site.less
+++ b/src/client/css/site.less
@@ -1,16 +1,17 @@
 @import "_animate.less";
-@import "_normalize.less";
+@import "_arrow.less";
+@import "_banner.less";
+@import "_button.less";
 @import "_card.less";
 @import "_core.less";
-@import "_button.less";
-@import "_shell.less";
-@import "_nav.less";
-@import "_banner.less";
-@import "_section.less";
-@import "_grid.less";
-@import "_site-list.less";
-@import "_page.less";
 @import "_filter-box.less";
-@import "_arrow.less";
+@import "_fonts.less";
 @import "_footer.less";
+@import "_grid.less"; 
 @import "_map.less";
+@import "_nav.less";
+@import "_normalize.less";
+@import "_page.less";
+@import "_section.less";
+@import "_shell.less";
+@import "_site.list.less"; 
